--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines":{
+    "node": "10.x"
+  },
   "dependencies": {
     "axios": "^0.27.2",
     "express": "^4.18.1",
