--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon ./server.js"
+    "start": "node ./server.js",
+    "dev": "nodemon ./server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "engines":{
-    "node": "10.x"
-  },
   "dependencies": {
     "axios": "^0.27.2",
     "express": "^4.18.1",
