--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "request": "^2.88.2"
+    "express-validator": "^6.14.2",
+    "request": "^2.88.2",
+    "socket.io": "^4.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
